First Commit : Entity Fixture and implementation

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -51,6 +51,12 @@
                             Les Docteurs
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_admin_social_network_index') }}">
+                            <i class="fa fa-facebook"></i>
+                            Les Réseaux sociaux
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
